--- a/dreamwidth/dreamwidth/Base.lproj/Main.storyboard
+++ b/dreamwidth/dreamwidth/Base.lproj/Main.storyboard
@@ -161,7 +161,96 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="H2N-Xj-DBN" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="908" y="1152"/>
+            <point key="canvasLocation" x="958" y="1284"/>
+        </scene>
+        <!--Entry Detail Controller-->
+        <scene sceneID="xDU-5j-z2J">
+            <objects>
+                <tableViewController id="7O6-V8-Xt1" customClass="BCHDWEntryDetailController" sceneMemberID="viewController">
+                    <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="grouped" separatorStyle="none" allowsSelection="NO" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="18" sectionFooterHeight="18" id="0vY-z6-1lK">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <color key="backgroundColor" cocoaTouchSystemColor="groupTableViewBackgroundColor"/>
+                        <prototypes>
+                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="none" indentationWidth="10" reuseIdentifier="metaData" rowHeight="103" id="arS-yr-jiP" customClass="BCHDWMetaDataTableViewCell">
+                                <rect key="frame" x="0.0" y="55.5" width="375" height="103"/>
+                                <autoresizingMask key="autoresizingMask"/>
+                                <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="arS-yr-jiP" id="evL-Rd-kT8">
+                                    <rect key="frame" x="0.0" y="0.0" width="375" height="103"/>
+                                    <autoresizingMask key="autoresizingMask"/>
+                                    <subviews>
+                                        <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="fzP-H4-poW">
+                                            <rect key="frame" x="16" y="8" width="80" height="80"/>
+                                            <constraints>
+                                                <constraint firstAttribute="width" constant="80" id="cHv-uR-xeV"/>
+                                                <constraint firstAttribute="height" constant="80" id="okt-61-bUk"/>
+                                            </constraints>
+                                        </imageView>
+                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="hSc-vM-uO3">
+                                            <rect key="frame" x="104" y="8" width="263" height="15"/>
+                                            <fontDescription key="fontDescription" style="UICTFontTextStyleCaption1"/>
+                                            <nil key="textColor"/>
+                                            <nil key="highlightedColor"/>
+                                        </label>
+                                        <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="dlK-Rj-S0f">
+                                            <rect key="frame" x="104" y="27" width="263" height="29"/>
+                                            <subviews>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="RRD-B9-3eK">
+                                                    <rect key="frame" x="4" y="4" width="255" height="21"/>
+                                                    <fontDescription key="fontDescription" style="UICTFontTextStyleHeadline"/>
+                                                    <nil key="textColor"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                            </subviews>
+                                            <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                            <constraints>
+                                                <constraint firstAttribute="trailing" secondItem="RRD-B9-3eK" secondAttribute="trailing" constant="4" id="Rop-9F-34V"/>
+                                                <constraint firstItem="RRD-B9-3eK" firstAttribute="top" secondItem="dlK-Rj-S0f" secondAttribute="top" constant="4" id="bq7-f0-XLJ"/>
+                                                <constraint firstItem="RRD-B9-3eK" firstAttribute="leading" secondItem="dlK-Rj-S0f" secondAttribute="leading" constant="4" id="k3b-i3-J4Z"/>
+                                                <constraint firstAttribute="bottom" secondItem="RRD-B9-3eK" secondAttribute="bottom" constant="4" id="oUh-Mf-lFJ"/>
+                                            </constraints>
+                                        </view>
+                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Nb9-q0-OwZ">
+                                            <rect key="frame" x="104" y="60" width="247" height="16"/>
+                                            <fontDescription key="fontDescription" style="UICTFontTextStyleFootnote"/>
+                                            <nil key="textColor"/>
+                                            <nil key="highlightedColor"/>
+                                        </label>
+                                    </subviews>
+                                    <constraints>
+                                        <constraint firstAttribute="trailingMargin" secondItem="Nb9-q0-OwZ" secondAttribute="trailing" constant="8" id="1FL-6i-Odz"/>
+                                        <constraint firstAttribute="trailing" secondItem="hSc-vM-uO3" secondAttribute="trailing" constant="8" id="2lv-Ni-0or"/>
+                                        <constraint firstItem="Nb9-q0-OwZ" firstAttribute="top" secondItem="dlK-Rj-S0f" secondAttribute="bottom" constant="4" id="3ex-Ad-SCm"/>
+                                        <constraint firstItem="dlK-Rj-S0f" firstAttribute="top" secondItem="hSc-vM-uO3" secondAttribute="bottom" constant="4" id="COO-sE-6f5"/>
+                                        <constraint firstItem="fzP-H4-poW" firstAttribute="centerY" secondItem="evL-Rd-kT8" secondAttribute="centerY" id="DeR-8a-L7w"/>
+                                        <constraint firstItem="hSc-vM-uO3" firstAttribute="top" secondItem="fzP-H4-poW" secondAttribute="top" id="Del-gk-ZTk"/>
+                                        <constraint firstAttribute="bottomMargin" relation="greaterThanOrEqual" secondItem="Nb9-q0-OwZ" secondAttribute="bottom" priority="750" constant="8" id="K2Z-3y-4Hr"/>
+                                        <constraint firstItem="hSc-vM-uO3" firstAttribute="leading" secondItem="fzP-H4-poW" secondAttribute="trailing" constant="8" id="LWu-zT-o47"/>
+                                        <constraint firstItem="Nb9-q0-OwZ" firstAttribute="leading" secondItem="fzP-H4-poW" secondAttribute="trailing" constant="8" id="Vcl-la-lKj"/>
+                                        <constraint firstItem="fzP-H4-poW" firstAttribute="leading" secondItem="evL-Rd-kT8" secondAttribute="leading" constant="16" id="c01-G5-68q"/>
+                                        <constraint firstAttribute="trailing" secondItem="dlK-Rj-S0f" secondAttribute="trailing" constant="8" id="kiM-G2-8fh"/>
+                                        <constraint firstAttribute="bottom" secondItem="fzP-H4-poW" secondAttribute="bottom" priority="750" constant="8" id="l2P-19-2zQ"/>
+                                        <constraint firstItem="dlK-Rj-S0f" firstAttribute="leading" secondItem="fzP-H4-poW" secondAttribute="trailing" constant="8" id="mck-wg-qmT"/>
+                                        <constraint firstItem="fzP-H4-poW" firstAttribute="top" secondItem="evL-Rd-kT8" secondAttribute="top" constant="8" id="zrq-Ac-Spq"/>
+                                    </constraints>
+                                </tableViewCellContentView>
+                                <connections>
+                                    <outlet property="avatarImageView" destination="fzP-H4-poW" id="nq2-j8-ixY"/>
+                                    <outlet property="dateLabel" destination="Nb9-q0-OwZ" id="G5U-5S-inQ"/>
+                                    <outlet property="titleLabel" destination="RRD-B9-3eK" id="IRo-dL-zqV"/>
+                                    <outlet property="userLabel" destination="hSc-vM-uO3" id="xTt-Lg-nj0"/>
+                                </connections>
+                            </tableViewCell>
+                        </prototypes>
+                        <connections>
+                            <outlet property="dataSource" destination="7O6-V8-Xt1" id="1EZ-O8-zp2"/>
+                            <outlet property="delegate" destination="7O6-V8-Xt1" id="NE0-Dp-9Kd"/>
+                        </connections>
+                    </tableView>
+                </tableViewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="Vba-ZL-S9n" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="3014" y="367"/>
         </scene>
         <!--Profile-->
         <scene sceneID="s4W-54-xKK">
@@ -278,7 +367,7 @@
                 </tableViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="zbw-eI-I6q" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="890" y="-342"/>
+            <point key="canvasLocation" x="908" y="-684"/>
         </scene>
         <!--Avatar Table View Controller-->
         <scene sceneID="2Gx-HE-XBB">
@@ -348,7 +437,7 @@
                 </navigationController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="rIT-Cb-ktr" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-62" y="-342"/>
+            <point key="canvasLocation" x="-68" y="-684"/>
         </scene>
         <!--Entry List View Controller-->
         <scene sceneID="f0G-zR-E2b">
@@ -461,6 +550,7 @@
                     <connections>
                         <outlet property="tableView" destination="q4a-7c-rec" id="JiD-1w-6HT"/>
                         <segue destination="3Uv-Yq-2oK" kind="presentation" identifier="login" modalTransitionStyle="crossDissolve" id="9sR-HG-bDm"/>
+                        <segue destination="7O6-V8-Xt1" kind="show" identifier="detail" id="WwF-aD-noB"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="cik-9h-9e1" userLabel="First Responder" sceneMemberID="firstResponder"/>
@@ -512,7 +602,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="G9i-Ig-rdO" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1909.5999999999999" y="363.86806596701655"/>
+            <point key="canvasLocation" x="2129" y="31"/>
         </scene>
     </scenes>
 </document>
